--- a/bin/application/Viewfxml/Login.fxml
+++ b/bin/application/Viewfxml/Login.fxml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.Tooltip?>
 <?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -33,8 +35,11 @@
                   <Pane prefHeight="288.0" prefWidth="346.0">
                      <children>
                         <TextField fx:id="username" layoutX="48.0" layoutY="55.0" prefHeight="30.0" prefWidth="250.0" promptText="Nom Utlilisateur" />
-                        <PasswordField fx:id="password" layoutX="48.0" layoutY="112.0" prefHeight="30.0" prefWidth="250.0" promptText="Mot de pass" />
-                        <HBox alignment="TOP_CENTER" layoutY="168.0" prefHeight="86.0" prefWidth="345.0">
+                        <PasswordField fx:id="password" layoutX="48.0" layoutY="112.0" prefHeight="30.0" prefWidth="250.0" promptText="Mot de pass">
+                           <tooltip>
+                              <Tooltip fx:id="tltip" text="Empty Tooltip" />
+                           </tooltip></PasswordField>
+                        <HBox alignment="CENTER" layoutY="168.0" prefHeight="86.0" prefWidth="345.0">
                            <children>
                               <Button fx:id="loginbtn" mnemonicParsing="false" onAction="#connect" prefHeight="30.0" prefWidth="120.0" styleClass="btn" stylesheets="@Login.css" text="Se Connecter" textFill="WHITE">
                                  <effect>
@@ -46,6 +51,7 @@
                                  </effect></Button>
                            </children>
                         </HBox>
+                        <CheckBox fx:id="passwordvue" layoutX="48.0" layoutY="151.0" mnemonicParsing="false" onAction="#showpassword" text="voir Mot de Pass" />
                      </children>
                   </Pane>
                </children>
