--- a/bin/application/Viewfxml/ajouter_client.fxml
+++ b/bin/application/Viewfxml/ajouter_client.fxml
@@ -31,27 +31,19 @@
          <children>
             <Pane prefHeight="200.0" prefWidth="200.0">
                <children>
-                  <Text fill="#a1a1a1" layoutX="14.0" layoutY="48.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Admin &gt;">
+                  <Text fill="#a1a1a1" layoutX="14.0" layoutY="48.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Les Clients &gt;">
                      <font>
                         <Font size="25.0" />
                      </font>
                   </Text>
-                  <Text fill="#a1a1a1" layoutX="122.0" layoutY="48.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Les Clients &gt;">
-                     <font>
-                        <Font size="25.0" />
-                     </font>
-                  </Text>
-               </children>
-            </Pane>
-            <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1">
-               <children>
-                  <Text layoutY="48.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Ajouter Client">
+                  <Text layoutX="162.0" layoutY="48.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Ajouter Client">
                      <font>
                         <Font name="System Bold" size="25.0" />
                      </font>
                   </Text>
                </children>
             </Pane>
+            <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" />
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="2">
                <children>
                   <Button fx:id="return_back" layoutX="86.0" layoutY="18.0" mnemonicParsing="false" onAction="#return_back" prefHeight="40.0" prefWidth="150.0" style="-fx-background-color: transparent;" text="&lt;     Retour">
