--- a/bin/application/Viewfxml/ajouter_rdv.fxml
+++ b/bin/application/Viewfxml/ajouter_rdv.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.ContextMenu?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.MenuItem?>
@@ -36,17 +37,12 @@
          <children>
             <Pane prefHeight="200.0" prefWidth="200.0">
                <children>
-                  <Text fill="#a1a1a1" layoutX="14.0" layoutY="37.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Admin &gt;">
+                  <Text fill="#a1a1a1" layoutX="14.0" layoutY="44.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Les Rendez-Vous &gt;">
                      <font>
                         <Font size="25.0" />
                      </font>
                   </Text>
-                  <Text fill="#a1a1a1" layoutX="111.0" layoutY="37.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Les Rendez-Vous &gt;">
-                     <font>
-                        <Font size="25.0" />
-                     </font>
-                  </Text>
-                  <Text layoutX="328.0" layoutY="38.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Ajouter Rendez-vous">
+                  <Text layoutX="233.0" layoutY="44.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Ajouter Rendez-vous">
                      <font>
                         <Font name="System Bold" size="25.0" />
                      </font>
@@ -55,58 +51,54 @@
             </Pane>
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1">
                <children>
-                  <Button layoutX="351.0" layoutY="19.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="100.0" styleClass="btn_return" stylesheets="@btn.css" text="&lt; Retour">
+                  <Button layoutX="332.0" layoutY="19.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="120.0" styleClass="btn_return" stylesheets="@btn.css" text="&lt; Retour">
                      <font>
-                        <Font name="System Bold" size="12.0" />
+                        <Font name="System Bold" size="14.0" />
                      </font>
                   </Button>
                </children></Pane>
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="3">
                <children>
                   <Line endX="100.0" layoutX="465.0" layoutY="100.0" rotate="90.0" scaleX="2.2" startX="-100.0" />
-                  <DatePicker fx:id="date_fin_rdv" layoutX="108.0" layoutY="22.0" onAction="#date" prefWidth="250.0" promptText="date fin" />
+                  <DatePicker fx:id="date_fin_rdv" layoutX="108.0" layoutY="22.0" onAction="#date" prefWidth="250.0" promptText="date fin" styleClass="inpt" stylesheets="@inputs.css" />
                </children></Pane>
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="4">
                <children>
-                  <TextField fx:id="car_model" layoutX="108.0" layoutY="21.0" prefHeight="25.0" prefWidth="250.0" promptText="car model" />
+                  <TextField fx:id="car_model" layoutX="108.0" layoutY="21.0" prefHeight="25.0" prefWidth="250.0" promptText="car model" styleClass="inpt" stylesheets="@inputs.css" />
                </children></Pane>
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="5">
                <children>
-                  <TextField fx:id="prix" layoutX="108.0" layoutY="21.0" prefHeight="25.0" prefWidth="250.0" promptText="Prix" />
+                  <TextField fx:id="prix" layoutX="108.0" layoutY="21.0" prefHeight="25.0" prefWidth="250.0" promptText="Prix" styleClass="inpt" stylesheets="@inputs.css" />
                </children></Pane>
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="6">
                <children>
-                  <TextArea fx:id="description_in" layoutX="58.0" layoutY="12.0" prefHeight="80.0" prefWidth="350.0" promptText="Description in" />
+                  <ChoiceBox fx:id="techni_choice" layoutX="108.0" layoutY="14.0" prefWidth="250.0" styleClass="inpt" stylesheets="@inputs.css" />
                </children></Pane>
-            <Pane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="7" />
+            <Pane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="7">
+               <children>
+                  <TextArea fx:id="description_in" layoutX="33.0" layoutY="-10.0" prefHeight="128.0" prefWidth="400.0" promptText="Description in" styleClass="inpt" stylesheets="@inputs.css" />
+               </children></Pane>
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="3">
                <children>
-                  <TextField fx:id="nom_client" layoutX="108.0" layoutY="21.0" prefWidth="250.0" promptText="Nom" />
+                  <TextField fx:id="nom_client" layoutX="108.0" layoutY="21.0" prefWidth="250.0" promptText="Nom" styleClass="inpt" stylesheets="@inputs.css" />
                </children>
             </Pane>
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="4">
                <children>
-                  <TextField fx:id="prenom_client" layoutX="108.0" layoutY="21.0" prefWidth="250.0" promptText="Prenom" />
+                  <TextField fx:id="prenom_client" layoutX="108.0" layoutY="21.0" prefWidth="250.0" promptText="Prenom" styleClass="inpt" stylesheets="@inputs.css" />
                </children>
             </Pane>
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="5">
                <children>
-                  <TextField fx:id="numero_client" layoutX="108.0" layoutY="21.0" prefWidth="250.0" promptText="Numéro" />
+                  <TextField fx:id="numero_client" layoutX="108.0" layoutY="21.0" prefWidth="250.0" promptText="Numéro" styleClass="inpt" stylesheets="@inputs.css" />
                </children>
             </Pane>
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="6">
                <children>
-                  <CheckBox fx:id="invite_check" layoutX="111.0" layoutY="25.0" mnemonicParsing="false" onAction="#invite_check" text="invité" />
+                  <CheckBox fx:id="invite_check" layoutX="111.0" layoutY="5.0" mnemonicParsing="false" onAction="#invite_check" text="invité" />
                </children>
             </Pane>
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="7" />
-            <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="8">
-               <children>
-                  <Button fx:id="btn_rdv" layoutX="-62.0" layoutY="11.0" mnemonicParsing="false" onAction="#add_rdv" prefHeight="30.0" prefWidth="120.0" styleClass="btn_add" stylesheets="@btn.css" text="Ajouter">
-                     <font>
-                        <Font name="System Bold" size="13.0" />
-                     </font></Button>
-               </children></Pane>
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
                <children>
                   <Line endX="100.0" layoutX="298.0" layoutY="67.0" startX="-245.0" />
@@ -114,7 +106,7 @@
             </Pane>
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
                <children>
-                  <TextField fx:id="serch" layoutX="108.0" layoutY="41.0" prefHeight="25.0" prefWidth="250.0" promptText="sélectioner un client">
+                  <TextField fx:id="serch" layoutX="108.0" layoutY="41.0" prefHeight="25.0" prefWidth="250.0" promptText="sélectioner un client" styleClass="inpt" stylesheets="@inputs.css">
                      <contextMenu>
                         <ContextMenu fx:id="context">
                           <items>
@@ -127,13 +119,22 @@
             </Pane>
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="2">
                <children>
-                  <DatePicker fx:id="datedebut" layoutX="108.0" layoutY="22.0" onAction="#date_dd" prefWidth="250.0" promptText="date debut" />
+                  <DatePicker fx:id="datedebut" layoutX="108.0" layoutY="20.0" onAction="#date_dd" prefWidth="250.0" promptText="date debut" styleClass="inpt" stylesheets="@inputs.css" />
                </children>
             </Pane>
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="8" />
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1">
                <children>
-                  <TextField fx:id="service_field" layoutX="108.0" layoutY="22.0" prefWidth="250.0" promptText="Service" />
+                  <TextField fx:id="service_field" layoutX="108.0" layoutY="22.0" prefWidth="250.0" promptText="Service" styleClass="inpt" stylesheets="@inputs.css" />
+               </children>
+            </Pane>
+            <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="8">
+               <children>
+                  <Button fx:id="btn_rdv" layoutX="332.0" layoutY="14.0" mnemonicParsing="false" onAction="#add_rdv" prefHeight="30.0" prefWidth="120.0" styleClass="btn_add" stylesheets="@btn.css" text="Ajouter">
+                     <font>
+                        <Font name="System Bold" size="13.0" />
+                     </font>
+                  </Button>
                </children>
             </Pane>
          </children>
