--- a/bin/application/Viewfxml/rdv_details.fxml
+++ b/bin/application/Viewfxml/rdv_details.fxml
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.CheckBox?>
-<?import javafx.scene.control.ContextMenu?>
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.DatePicker?>
-<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextArea?>
@@ -39,23 +37,15 @@
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" />
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
                <children>
-                  <TextField fx:id="serch" layoutX="30.0" layoutY="21.0" prefHeight="25.0" prefWidth="250.0" promptText="sélectioner un client">
-                     <contextMenu>
-                        <ContextMenu fx:id="context">
-                          <items>
-                            <MenuItem mnemonicParsing="false" text="Unspecified Action" />
-                          </items>
-                        </ContextMenu>
-                     </contextMenu>
-                  </TextField>
+                  <TextField fx:id="nom_client" editable="false" layoutX="33.0" layoutY="25.0" prefWidth="250.0" promptText="Nom" />
                </children></Pane>
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="3">
                <children>
-                  <TextField fx:id="prenom_client" layoutX="30.0" layoutY="21.0" prefWidth="250.0" promptText="Prenom" />
+                  <TextField fx:id="numero_client" editable="false" layoutX="30.0" layoutY="22.0" prefWidth="250.0" promptText="Numéro" />
                </children></Pane>
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="4">
                <children>
-                  <TextField fx:id="numero_client" layoutX="30.0" layoutY="21.0" prefWidth="250.0" promptText="Numéro" />
+                  <ChoiceBox fx:id="tech_choice" layoutX="30.0" layoutY="22.0" prefWidth="250.0" />
                </children></Pane>
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="5">
                <children>
@@ -74,24 +64,27 @@
                   </TableView>
                </children></Pane>
             <Pane prefHeight="62.0" prefWidth="310.0" GridPane.columnIndex="1" GridPane.rowIndex="8" />
-            <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="3">
+            <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="3" />
+            <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="4">
                <children>
-                  <TextArea fx:id="description_out" layoutX="14.0" layoutY="14.0" prefHeight="125.0" prefWidth="250.0" promptText="Out" />
-               </children></Pane>
-            <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="4" />
+                  <TextArea fx:id="description_out" layoutX="20.0" layoutY="-7.0" prefHeight="150.0" prefWidth="270.0" promptText="Out" />
+               </children>
+            </Pane>
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="5" />
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="6" />
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="7" />
-            <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+            <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="2">
+               <children>
+                  <TextArea fx:id="description_in" layoutX="20.0" layoutY="-61.0" prefHeight="150.0" prefWidth="270.0" promptText="In" />
+               </children></Pane>
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
                <children>
-                  <TextField fx:id="nom_client" layoutX="30.0" layoutY="21.0" prefWidth="250.0" promptText="Nom" />
-                  <CheckBox fx:id="invite_check" layoutX="30.0" layoutY="-8.0" mnemonicParsing="false" text="invité" />
+                  <TextField fx:id="prenom_client" editable="false" layoutX="33.0" layoutY="23.0" prefWidth="250.0" promptText="Prenom" />
                </children>
             </Pane>
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1">
                <children>
-                  <DatePicker fx:id="date_debut_rdv" layoutX="30.0" layoutY="21.0" prefWidth="250.0" promptText="date debut" />
+                  <DatePicker fx:id="date_debut_rdv" layoutX="30.0" layoutY="22.0" prefWidth="250.0" promptText="date debut" />
                </children>
             </Pane>
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="2">
@@ -131,11 +124,7 @@
                   <Button fx:id="supp_btn" layoutX="196.0" layoutY="19.0" mnemonicParsing="false" onAction="#supp" prefHeight="30.0" prefWidth="100.0" text="Supprimer" />
                </children>
             </Pane>
-            <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="1">
-               <children>
-                  <TextArea fx:id="description_in" layoutX="16.0" prefHeight="125.0" prefWidth="250.0" promptText="In" />
-               </children>
-            </Pane>
+            <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="1" />
             <Pane prefHeight="0.0" prefWidth="310.0" GridPane.columnIndex="2" GridPane.rowIndex="8">
                <children>
                   <Button fx:id="fact_tbn" layoutX="196.0" layoutY="19.0" mnemonicParsing="false" onAction="#factur" prefHeight="30.0" prefWidth="100.0" text="facture" />
