--- a/src/application/Viewfxml/Dashbord.fxml
+++ b/src/application/Viewfxml/Dashbord.fxml
@@ -46,7 +46,19 @@
                <padding>
                   <Insets left="30.0" />
                </padding></Button>
-            <VBox prefHeight="155.0" prefWidth="100.0" />
+            <VBox alignment="BOTTOM_LEFT" prefHeight="155.0" prefWidth="100.0">
+               <children>
+                  <Button fx:id="btn_profile" alignment="BASELINE_LEFT" mnemonicParsing="false" onAction="#profile" prefHeight="60.0" prefWidth="170.0" styleClass="btn_leftmenu" stylesheets="@dashbord_style.css" text="Profile" textFill="#9c9c9c">
+                     <padding>
+                        <Insets left="30.0" />
+                     </padding>
+                  </Button>
+                  <Button fx:id="btn_logout" alignment="BASELINE_LEFT" mnemonicParsing="false" onAction="#logout" prefHeight="60.0" prefWidth="170.0" styleClass="btn_leftmenu" text="Logout" textFill="#9c9c9c">
+                     <padding>
+                        <Insets left="30.0" />
+                     </padding>
+                  </Button>
+               </children></VBox>
          </children>
       </VBox>
    </left>
