--- a/src/application/Viewfxml/add_employe_container.fxml
+++ b/src/application/Viewfxml/add_employe_container.fxml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.Tooltip?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
@@ -32,12 +35,7 @@
          <children>
             <Pane prefHeight="200.0" prefWidth="200.0">
                <children>
-                  <Text fill="#a1a1a1" layoutX="14.0" layoutY="48.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Admin &gt;">
-                     <font>
-                        <Font size="25.0" />
-                     </font>
-                  </Text>
-                  <Text fill="#a1a1a1" layoutX="122.0" layoutY="48.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Les employés &gt;">
+                  <Text fill="#a1a1a1" layoutX="14.0" layoutY="48.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Les employés &gt;">
                      <font>
                         <Font size="25.0" />
                      </font>
@@ -46,7 +44,7 @@
             </Pane>
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1">
                <children>
-                  <Text layoutX="14.0" layoutY="48.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Ajouter  Employe">
+                  <Text layoutX="-98.0" layoutY="48.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Ajouter  Employe">
                      <font>
                         <Font name="System Bold" size="25.0" />
                      </font>
@@ -88,7 +86,11 @@
             </Pane>
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="6">
                <children>
-                  <TextField fx:id="passworField" layoutX="49.0" layoutY="24.0" prefHeight="30.0" prefWidth="300.0" promptText="Mot de Pass" styleClass="inpt" stylesheets="@inputs.css" />
+                  <PasswordField fx:id="passworField" layoutX="49.0" layoutY="25.0" prefHeight="3.0" prefWidth="300.0" promptText="Mot de Pass">
+                     <tooltip>
+                        <Tooltip fx:id="password" text="password" />
+                     </tooltip>
+                  </PasswordField>
                </children>
             </Pane>
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="7">
@@ -104,6 +106,7 @@
                   </Button>
                </children>
             </Pane>
+            <CheckBox fx:id="passwordvue" mnemonicParsing="false" onAction="#showpassword" text="Mot de Pass visible" GridPane.columnIndex="2" GridPane.rowIndex="6" />
          </children>
       </GridPane>
    </center>
